force-app/main/default/objects/User/fields/AccPac_Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>AccPac_Rep_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This number is sent to AccPac to assign the rep during initial Customer creation.  All Rep changes are done in AccPac thereafter.  &quot;-&quot; Is used for Alison to default users for the time being.</inlineHelpText>
    <label>AccPac Rep Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>