force-app/main/default/objects/User/fields/BMCServiceDesk__Account__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Account__c</fullName>
    <formula>if(IsBlank(Contact.Account.Name), BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>