force-app/main/default/objects/User/fields/BMCServiceDesk__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Account_ID__c</fullName>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>