force-app/main/default/objects/User/fields/BMCServiceDesk__AssetManagementView__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AssetManagementView__c</fullName>
    <label>Asset Management View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Read-Only</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Update and Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>