force-app/main/default/objects/User/fields/BMCServiceDesk__AssignRemedyforceLic__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
    <label>Assign Remedyforce License</label>
    <type>Checkbox</type>
</CustomField>