force-app/main/default/objects/User/fields/BMCServiceDesk__Broadcast_ticker_speed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
    <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
    <label>Broadcast ticker speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>