force-app/main/default/objects/User/fields/BMCServiceDesk__Building__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Building__c</fullName>
    <label>Building</label>
    <length>25</length>
    <type>Text</type>
</CustomField>