force-app/main/default/objects/User/fields/BMCServiceDesk__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Business_Hours__c</fullName>
    <inlineHelpText>Select the shift in which the staff member works.</inlineHelpText>
    <label>Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>