force-app/main/default/objects/User/fields/BMCServiceDesk__ChatStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ChatStatus__c</fullName>
    <inlineHelpText>Select the chat status.</inlineHelpText>
    <label>Chat Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>