force-app/main/default/objects/User/fields/BMCServiceDesk__CIManagementView__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CIManagementView__c</fullName>
    <label>CI Management View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Read-Only</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Update and Delete</fullName>
                <default>true</default>
                <label>Update and Delete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>