force-app/main/default/objects/User/fields/BMCServiceDesk__EnableChat__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EnableChat__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
    <label>Enable Chat</label>
    <type>Checkbox</type>
</CustomField>