force-app/main/default/objects/User/fields/BMCServiceDesk__Extension__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Extension__c</fullName>
    <formula>Extension</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension</label>
    <type>Text</type>
</CustomField>