force-app/main/default/objects/User/fields/BMCServiceDesk__IsRemedyforceAdministrator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remedyforce Administrator</label>
    <type>Checkbox</type>
</CustomField>