force-app/main/default/objects/User/fields/BMCServiceDesk__LastAvailableTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
    <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
    <label>Last Available Time</label>
    <type>DateTime</type>
</CustomField>