force-app/main/default/objects/User/fields/BMCServiceDesk__Manage_QV__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Manage_QV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables staff members to create and manage QuickViews in the Remedyforce Console.</description>
    <label>Manage QuickViews</label>
    <type>Checkbox</type>
</CustomField>