force-app/main/default/objects/User/fields/BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage ServiceDesk Staff Member</label>
    <type>Checkbox</type>
</CustomField>