force-app/main/default/objects/User/fields/BMCServiceDesk__Note__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>