force-app/main/default/objects/User/fields/BMCServiceDesk__pager__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__pager__c</fullName>
    <label>Pager</label>
    <length>25</length>
    <type>Text</type>
</CustomField>