force-app/main/default/objects/User/fields/BMCServiceDesk__Picture__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Picture__c</fullName>
    <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
    <label>Picture</label>
    <type>Text</type>
</CustomField>