force-app/main/default/objects/User/fields/BMCServiceDesk__Remedyforce_Casual_User__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Remedyforce_Casual_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remedyforce Casual User</label>
    <type>Checkbox</type>
</CustomField>