force-app/main/default/objects/User/fields/BMCServiceDesk__Remedyforce_Chatbot_User__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Remedyforce_Chatbot_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been deprecated and is no longer used in Remedyforce</description>
    <label>BMC Helix Chatbot User (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>