force-app/main/default/objects/User/fields/BMCServiceDesk__Remedyforce_Knowledge_User__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remedyforce Knowledge User</label>
    <type>Checkbox</type>
</CustomField>