force-app/main/default/objects/User/fields/BMCServiceDesk__RF_AccessibilityMode__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_AccessibilityMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field enables Accessibility Mode for Remedyforce Self Service.</description>
    <inlineHelpText>This field enables Accessibility Mode for Remedyforce Self Service.</inlineHelpText>
    <label>Remedyforce Accessibility Mode</label>
    <type>Checkbox</type>
</CustomField>