force-app/main/default/objects/User/fields/BMCServiceDesk__RF_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_Email_Signature__c</fullName>
    <description>Inserting user signatures while sending or replying emails through Activity Feed.</description>
    <label>Rich Text Email Signature</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>