force-app/main/default/objects/User/fields/BMCServiceDesk__RF_IntegrationUserInfo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_IntegrationUserInfo__c</fullName>
    <description>Administrators can save the username (with/without domain) as discovered on user devices by Remedyforce Discovery or discovery tools. Used for mapping to populate the Salesforce username based on username discovered by Remedyforce Discovery  or  discovery tools.</description>
    <label>Integration User Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>