force-app/main/default/objects/User/fields/BMCServiceDesk__Room__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Room__c</fullName>
    <label>Room</label>
    <length>25</length>
    <type>Text</type>
</CustomField>