force-app/main/default/objects/User/fields/BMCServiceDesk__SelfService_Preferences__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
    <description>SelfService user preference settings</description>
    <label>SelfService Preferences</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>