force-app/main/default/objects/User/fields/BMCServiceDesk__UniqueUserIDInSource__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
    <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
    <externalId>true</externalId>
    <label>Unique User ID in Source</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>