force-app/main/default/objects/User/fields/BMCServiceDesk__VIP__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>