force-app/main/default/objects/User/fields/Contact_Login__c.field-meta.xml
<CustomField>
    <fullName>Contact_Login__c</fullName>
    <label>Contact Login</label>
    <length>35</length>
    <type>Text</type>
</CustomField>