force-app/main/default/objects/User/fields/Customer_eNewsletters__c.field-meta.xml
<CustomField>
    <fullName>Customer_eNewsletters__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer eNewsletters</label>
    <type>Checkbox</type>
</CustomField>