force-app/main/default/objects/User/fields/Customer_Opinion_eSurveys__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opinion_eSurveys__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer Opinion eSurveys</label>
    <type>Checkbox</type>
</CustomField>