force-app/main/default/objects/User/fields/Customer_Satisfaction_eSurveys__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_eSurveys__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer Satisfaction eSurveys</label>
    <type>Checkbox</type>
</CustomField>