force-app/main/default/objects/User/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <externalId>true</externalId>
    <label>Employee Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>