force-app/main/default/objects/User/fields/ID_Casesafe__c.field-meta.xml
<CustomField>
    <fullName>ID_Casesafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (Casesafe)</label>
    <type>Text</type>
</CustomField>