force-app/main/default/objects/User/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>NOT ( IsActive )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>