force-app/main/default/objects/User/fields/IsUAT__c.field-meta.xml
<CustomField>
    <fullName>IsUAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUAT</label>
    <type>Checkbox</type>
</CustomField>