force-app/main/default/objects/User/fields/Loop__LOOPlus_Tester__c.field-meta.xml
<CustomField>
    <fullName>Loop__LOOPlus_Tester__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will allow this user to run LOOPlus on a staging environment when testing is available. When enabled, the LOOPlus page will take slightly longer to load.</inlineHelpText>
    <label>DDP Tester</label>
    <type>Checkbox</type>
</CustomField>