force-app/main/default/objects/User/fields/Portal_Files_Reports__c.field-meta.xml
<CustomField>
    <fullName>Portal_Files_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to provide access to manually uploaded files and reports.  Applicable only to portal users.</inlineHelpText>
    <label>Portal Files &amp; Reports</label>
    <type>Checkbox</type>
</CustomField>