force-app/main/default/objects/User/fields/Primary_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to distinguish dispatchers from service managers in looker reports</description>
    <inlineHelpText>used to distinguish dispatchers from service managers in looker reports</inlineHelpText>
    <label>Primary Dispatcher</label>
    <type>Checkbox</type>
</CustomField>