force-app/main/default/objects/User/fields/Promotional_Mailings__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Mailings__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Promotional Mailings</label>
    <type>Checkbox</type>
</CustomField>