force-app/main/default/objects/User/fields/sma__AllowMapAnythingExports__c.field-meta.xml
<CustomField>
    <fullName>sma__AllowMapAnythingExports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow MapAnything Exports</label>
    <type>Checkbox</type>
</CustomField>