force-app/main/default/objects/User/fields/sma__DefaultProximityRadius__c.field-meta.xml
<CustomField>
    <fullName>sma__DefaultProximityRadius__c</fullName>
    <label>Default Proximity Radius</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>