force-app/main/default/objects/User/fields/sma__EditMapAnythingOrgWirdeQueries__c.field-meta.xml
<CustomField>
    <fullName>sma__EditMapAnythingOrgWirdeQueries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit MapAnything Org Wide Queries</label>
    <type>Checkbox</type>
</CustomField>