force-app/main/default/objects/User/fields/sma__MABetaTester__c.field-meta.xml
<CustomField>
    <fullName>sma__MABetaTester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MapAnything Beta Tester</label>
    <type>Checkbox</type>
</CustomField>