force-app/main/default/objects/User/fields/sma__MADefaultLatitude__c.field-meta.xml
<CustomField>
    <fullName>sma__MADefaultLatitude__c</fullName>
    <label>MapAnything Default Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>