force-app/main/default/objects/User/fields/sma__MADefaultLongitude__c.field-meta.xml
<CustomField>
    <fullName>sma__MADefaultLongitude__c</fullName>
    <label>MapAnything Default Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>