force-app/main/default/objects/User/fields/sma__MADefaultType__c.field-meta.xml
<CustomField>
    <fullName>sma__MADefaultType__c</fullName>
    <label>MADefaultType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>