force-app/main/default/objects/User/fields/sma__MADefaultZoomLevel__c.field-meta.xml
<CustomField>
    <fullName>sma__MADefaultZoomLevel__c</fullName>
    <label>MapAnything Default Zoom Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>