force-app/main/default/objects/User/fields/sma__MAMaxExportSize__c.field-meta.xml
<CustomField>
    <fullName>sma__MAMaxExportSize__c</fullName>
    <label>MapAnything Max Export Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>