force-app/main/default/objects/User/fields/sma__MAMaxQuerySize__c.field-meta.xml
<CustomField>
    <fullName>sma__MAMaxQuerySize__c</fullName>
    <label>MapAnything Max Query Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>