force-app/main/default/objects/User/fields/sma__MapAnythingSettings__c.field-meta.xml
<CustomField>
    <fullName>sma__MapAnythingSettings__c</fullName>
    <label>Map Anything Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>