force-app/main/default/objects/User/fields/sma__TestUserLookup__c.field-meta.xml
<CustomField>
    <fullName>sma__TestUserLookup__c</fullName>
    <description>For blueline bug.</description>
    <label>TestUserLookup</label>
    <relationshipName>TestChildLookup</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>