force-app/main/default/objects/User/validationRules/BMCServiceDesk__Validate_FootPrints_Login.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
    <active>false</active>
    <description>Enable this validation rule to prevent users from editing the BMC Client Management Login ID. However, the users can delete the BMC Client Management Login ID.</description>
    <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
    <errorMessage>You can delete a BMC Client Management Login ID from here but you cannot edit it.</errorMessage>
</ValidationRule>