force-app/main/default/objects/User/validationRules/Employee_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Number_Required</fullName>
    <active>true</active>
    <description>Employee Number is required for all profiles except for Citron Hygiene Community User.</description>
    <errorConditionFormula>AND(
ISBLANK(Employee_Number__c),
Profile.Name &lt;&gt; &apos;Citron Hygiene Community User&apos;
)</errorConditionFormula>
    <errorMessage>Employee Number is required for all profiles except for Citron Hygiene Community User.</errorMessage>
</ValidationRule>