force-app/main/default/objects/User/listViews/Citron_Portal_Users.listView-meta.xml
<ListView>
    <fullName>Citron_Portal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>BMCServiceDesk__Account__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Citron Hygiene Community User</value>
    </filters>
    <label>Citron Portal Users</label>
    <language>en_US</language>
</ListView>