force-app/main/default/objects/User/listViews/Customer_Group.listView-meta.xml
<ListView>
    <fullName>Customer_Group</fullName>
    <columns>FULL_NAME</columns>
    <columns>AccPac_Rep_Number__c</columns>
    <columns>Accpac_Customer_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccPac_Rep_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Customer Group</label>
    <language>en_US</language>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>