force-app/main/default/objects/User/listViews/Customer_Success.listView-meta.xml
<ListView>
    <fullName>Customer_Success</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Customer Service &amp; Order Entry</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Customer Success</label>
    <language>en_US</language>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>