force-app/main/default/objects/User/listViews/Field_Service_Managers.listView-meta.xml
<ListView>
    <fullName>Field_Service_Managers</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Employee_Number__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Field Service Manager</value>
    </filters>
    <label>Field Service Managers</label>
    <language>en_US</language>
</ListView>