force-app/main/default/objects/User/listViews/London_Hygiene_Service.listView-meta.xml
<ListView>
    <fullName>London_Hygiene_Service</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Employee_Number__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>London Hygiene Service</value>
    </filters>
    <label>London Hygiene Service</label>
    <language>en_US</language>
</ListView>